# EchoNotify

./: pyproject.toml
.github/workflows/: .github.yaml
alembic/: env.py
alembic/versions/: 7a7453e3135f_init_user_model.py
echonotify/: config.py  exceptions.py  main.py  settings.py
echonotify/auth/: schema.py  service.py  utils.py
echonotify/infrastructure/database/: database.py
echonotify/user/: dependencies.py
echonotify/user/user_creation/: schema.py
echonotify/user/user_profile/: models.py  repository.py
infra/: Dockerfile  docker-compose.yaml
